# shock

./: .gitignore  Cargo.toml
c-v1/: .gitignore  CMakeLists.txt
c-v1/config/compile/: shocked_cmake_config.h.in
c-v1/src/: main.c
docs/: actions.md  concepts.md  primitive-types.md
docs/grand-design/: overview.md
docs/grand-design/mockups/: defining-new-types.md
docs/mockups/: creating-main.md
docs/reports/: 2019-02-10.md
python/: mock.py
python/shocklang/core/: eval.py
python/shocklang/core/graph/: context.py
python/shocklang/graph/: __init__.py
rust-v1/docs/: concepts.md
rust-v1/docs/grand-design/: api.md  feature-list.md
rust-v1/docs/grand-design/mockups/: creating-main.md
rust-v1/docs/mockups/: variables.md
rust-v1/docs/stories/: use-cases.md
rust-v1/python/: README.md  mock.py
rust-v1/python/shocklang/core/: eval.py
rust-v1/python/shocklang/core/graph/: data.py
rust-v1/python/shocklang/core/parser/: __init__.py
rust-v1/src/: interpreter.rs  model.rs  parser.rs
rust-v1/src/placemodel/: mod.rs  pathtypes.rs  storage.rs
rust-v1/src/primitive/: types.rs
src/: interpreter.rs  lib.rs  main.rs  model.rs  parser.rs
src/placemodel/: pathtypes.rs  storage.rs
src/primitive/: types.rs
